# velocity-hypothesis-test

./: .gitignore  .readthedocs.yaml  README.rst  matplotlibrc  matplotlibrc-embeddings  pyproject.toml
.github/workflows/: docs.yml  main.yml  paper.yml  test.yml
docs/: conf.py  index.rst
docs/source/: hypothesis_testing.rst  modules.rst  neighbors.rst  plotting.rst  test_statistic.rst
experiments/: datasets.py  make_all_figures.py
experiments/configs/: config.yaml
experiments/configs/dataset/: bonemarrow.yaml  covid.yaml  defaults.yaml  dentategyrus.yaml  developing_mouse_brain.yaml  gastrulation_erythroid.yaml  mouse_bone_marrow.yaml  nystroem.yaml  organogenesis.yaml  pancreas_dynamical.yaml  pancreas_stochastic.yaml  veloviz.yaml
notebooks/: demo-flexible_interface.ipynb  demo.ipynb  fig1_cell_cycle-single_test.ipynb  fig1_pancreas-single_test.ipynb  fig1_pancreas.ipynb  veloviz.py
notebooks/embeddings/: embedding_scvelo_human_cell_cycle_scvelo_log_PCA30_on_x_exaggeration_2.npy
tests/: integration_test.py  test_explicit_hypothesis_testing.py  test_hypothesis_testing.py  test_neighbors.py  test_statistic_test.py  test_step_function.py  test_test_statistic_function.py
velotest/: explicit_hypothesis_testing.py  hypothesis_testing.py  neighbors.py  plotting.py  step_function.py  test_statistic.py  test_statistic_function.py
