[project]
name = "velotest"
description = "A hypothesis test for velocity embeddings."
version = "0.0.1"
readme = "README.rst"

dependencies = [
    "torch >= 2.1.2",
    "numpy >= 1.26.4",
    "scikit-learn >= 1.3.0",
    "tqdm >= 4.66.1",
    "matplotlib >= 3.8.2"
]

[project.optional-dependencies]
docs = [
    "sphinx >= 7.4.7",
]
dev = [
    "pytest >= 8.3.5",
]

[tool.setuptools]
packages = ["velotest"]