[project]
name = "velotest"
description = "A hypothesis test for velocity embeddings."
version = "0.0.1"
readme = "README.rst"
requires-python = ">=3.9"

dependencies = [
    "torch >= 2.1.2",
    "numpy >= 1.26.4",
    "scikit-learn >= 1.3.0",
    "tqdm >= 4.66.1",
    "matplotlib >= 3.8.2",
    "pandas>=2.1.4",
    "scvelo>=0.3.2",
]

[project.optional-dependencies]
docs = [
    "sphinx >= 7.4.7",
]
dev = [
    "pytest >= 8.3.5",
]

[tool.setuptools]
packages = ["velotest"]

[tool.pytest.ini_options]
testpaths = ["tests"]